<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/classification">
        <menu>
            <item
                android:id="@+id/item_movie"
                android:icon="@drawable/icon_movie"
                android:title="@string/movie" />

            <item
                android:id="@+id/item_music"
                android:icon="@drawable/icon_music"
                android:title="@string/music" />
        </menu>
    </item>
    <item android:title="@string/option">
        <menu>
            <item
                android:id="@+id/item_collection"
                android:icon="@drawable/icon_collection_n"
                android:title="@string/my_collection" />

            <item
                android:id="@+id/item_setting"
                android:icon="@drawable/icon_setting"
                android:title="@string/system_setting" />

            <item
                android:id="@+id/item_feedback"
                android:icon="@drawable/icon_feedback"
                android:title="@string/problem_feedback" />

            <item
                android:id="@+id/item_about"
                android:icon="@drawable/icon_about"
                android:title="@string/about_app" />
        </menu>
    </item>
</menu>